styles.css
/* ... */
/*
Settings Page
*/

.ledger-input-error {
  border-color: var(--text-error) !important;
}

.ledger-donation {
  width: 70%;
  margin: 0 auto;
  text-align: center;
}

.ledger-donate-button {
  margin: 10px;
}

/*
Chartist Legend Plugin
*/

.ct-legend {
  position: relative;
  text-align: center; /* Position of the group, use either left or right */
  z-index: 10;
}
.ct-legend li {
  display: inline; /* Make the legend in one row */
  text-align: center;
  position: relative;
  padding-left: 23px;
  margin-right: 20px;
  margin-top: 3px;
  list-style-type: none; /* Hide the default bullet */
}
.ct-legend li:before {
  width: 15px; /* How big is the color */
  height: 15px; /* How big is the color */
  position: absolute;
  left: 0;
  content: '';
  border: 3px solid transparent;
  border-radius: 2px;
}
.ct-legend.ct-legend-inside {
  position: absolute;
  top: 0;
  right: 0;
}
/*
These colors must be matched with the series-a, series-b, etc. from below.
*/
.ct-series-0:before {
  background-color: #d70206;
}
.ct-series-1:before {
  background-color: #f05b4f;
}
.ct-series-2:before {
  background-color: #f4c63d;
}
.ct-series-3:before {
  background-color: #d17905;
}
.ct-series-4:before {
  background-color: #453d3f;
}
.ct-series-5:before {
  background-color: #59922b;
}
.ct-series-6:before {
  background-color: #0544d3;
}
.ct-series-7:before {
  background-color: #6b0392;
}
.ct-series-8:before {
  background-color: #f05b4f;
}
.ct-series-9:before {
  background-color: #dda458;
}
.ct-series-10:before {
  background-color: #eacf7d;
}
.ct-series-11:before {
  background-color: #86797d;
}
.ct-series-12:before {
  background-color: #b2c326;
}
.ct-series-13:before {
  background-color: #6188e2;
}
.ct-series-14:before {
  background-color: #a748ca;
}

/*
Chartist Stylesheet
*/

.ct-double-octave:after,
.ct-major-eleventh:after,
.ct-major-second:after,
.ct-major-seventh:after,
.ct-major-sixth:after,
.ct-major-tenth:after,
.ct-major-third:after,
.ct-major-twelfth:after,
.ct-minor-second:after,
.ct-minor-seventh:after,
.ct-minor-sixth:after,
.ct-minor-third:after,
.ct-octave:after,
.ct-perfect-fifth:after,
.ct-perfect-fourth:after,
.ct-square:after {
  content: '';
  clear: both;
}
.ct-label {
  fill: rgba(0, 0, 0, 0.4);
  color: rgba(0, 0, 0, 0.4);
  font-size: 0.75rem;
  line-height: 1;
}
.ct-grid-background,
.ct-line {
  fill: none;
}
.ct-chart-bar .ct-label,
.ct-chart-line .ct-label {
  display: block;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
}
.ct-chart-donut .ct-label,
.ct-chart-pie .ct-label {
  dominant-baseline: central;
}
.ct-label.ct-horizontal.ct-start {
  -webkit-box-align: flex-end;
  -webkit-align-items: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: flex-start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: flex-start;
  justify-content: flex-start;
  text-align: left;
  text-anchor: start;
}
.ct-label.ct-horizontal.ct-end {
  -webkit-box-align: flex-start;
  -webkit-align-items: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: flex-start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: flex-start;
  justify-content: flex-start;
  text-align: left;
  text-anchor: start;
}
.ct-label.ct-vertical.ct-start {
  -webkit-box-align: flex-end;
  -webkit-align-items: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: flex-end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: flex-end;
  justify-content: flex-end;
  text-align: right;
  text-anchor: end;
}
.ct-label.ct-vertical.ct-end {
  -webkit-box-align: flex-end;
  -webkit-align-items: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: flex-start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: flex-start;
  justify-content: flex-start;
  text-align: left;
  text-anchor: start;
}
.ct-chart-bar .ct-label.ct-horizontal.ct-start {
  -webkit-box-align: flex-end;
  -webkit-align-items: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  text-anchor: start;
}
.ct-chart-bar .ct-label.ct-horizontal.ct-end {
  -webkit-box-align: flex-start;
  -webkit-align-items: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  text-anchor: start;
}
/* Line chart tick labels: shift left by half the foreignObject width so the
   text is centered under the tick mark rather than starting at it. */
.ct-chart-line .ct-label.ct-horizontal.ct-end {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  text-anchor: middle;
  margin-left: -50%;
}
.ct-chart-bar.ct-horizontal-bars .ct-label.ct-horizontal.ct-start {
  -webkit-box-align: flex-end;
  -webkit-align-items: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: flex-start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: flex-start;
  justify-content: flex-start;
  text-align: left;
  text-anchor: start;
}
.ct-chart-bar.ct-horizontal-bars .ct-label.ct-horizontal.ct-end {
  -webkit-box-align: flex-start;
  -webkit-align-items: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: flex-start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: flex-start;
  justify-content: flex-start;
  text-align: left;
  text-anchor: start;
}
/* ... */

